src/assets/toolkit/styles/toolkit.scss
// Import fonts from Google CDN
@import url( 'https://fonts.googleapis.com/css?family=Roboto+Slab:300,400|Roboto:400,400i,700,700i');
@import url( 'https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css');

// Overwrite Bootstrap defaults
$brand-primary: #219633;
$brand-success: #31D843;
$brand-info: #3DD6D0;
$brand-warning: #F9A03F;
$brand-danger: #D66853;
$font-family-sans-serif: 'Roboto', "Helvetica Neue", Helvetica, Arial, sans-serif;
$font-family-serif: 'Roboto Slab', Georgia, "Times New Roman", Times, serif;
$headings-font-family: $font-family-serif;
$headings-font-weight: 400;
$border-radius-base: 0;
$border-radius-large: 0;
$border-radius-small: 0;
$dropdown-link-hover-color: #FFF;
$dropdown-link-hover-bg: $brand-primary;
$navbar-inverse-bg: $brand-primary;
$navbar-inverse-color: #FFF;
$navbar-inverse-link-color: #FFF;
$navbar-inverse-link-hover-bg: darken($navbar-inverse-bg, 10%);
$navbar-inverse-link-hover-color: #FFF;
$navbar-inverse-link-disabled-color: darken($navbar-inverse-bg, 10%);
$navbar-inverse-toggle-hover-bg: darken($navbar-inverse-bg, 10%);
$navbar-inverse-toggle-border-color: darken($navbar-inverse-bg, 10%);
$hr-border: #CCC;

// More fun variables for us
$white: #FFF;

// Import vendor styles
@import "vendor/_bootstrap.scss";
@import "vendor/bootstrap/_panels.scss";

// Custom styles
body {
	font-size  : 16px;
	line-height: 1.5;
}

.btn-primary {
	font-weight: bold;

	.badge {
		background: $white !important;
		color     : $brand-primary !important;
	}
}

.navbar-vertical {
	@media (min-width: $screen-sm) {
		&.navbar-branded {
			border-top: 1px solid $gray-lighter;
		}

		.navbar-collapse {
			height       : auto;
			border-top   : 0;
			box-shadow   : none;
			max-height   : none;
			padding-left : 0;
			padding-right: 0;
		}

		.navbar-collapse.collapse {
			display       : block !important;
			width         : auto !important;
			padding-bottom: 0;
			overflow      : visible !important;
		}

		.navbar-collapse.in {
			overflow-x: visible;
		}

		&.navbar {
			// margin-right: 0;
			// margin-left: 0;
		}

		.navbar-nav {
			margin: 7.5px -15px;

			li.section-header {
				padding-top   : 7px;
				padding-left  : 7px;
				padding-bottom: 7px;
				text-transform: uppercase;
				letter-spacing: 0.025em;
				opacity       : 0.8;
				font-size     : 0.8em;
			}
		}

		.navbar-header,
		.navbar-left,
		.navbar-nav,
		.navbar-nav > li,
		.navbar-right {
			float: none !important;
		}

		.navbar-right .dropdown-menu {
			left : 0;
			right: auto;
		}

		.navbar-collapse .navbar-nav.navbar-right:last-child {
			margin-right: 0;
		}
	}
}

.navbar-alert {
	background: $brand-primary;
	color     : $white;
	text-align: center;
	font-size : 0.8em;
	padding   : 0.5em 5%;

	a {
		color          : $white;
		font-weight    : bold;
		text-decoration: underline;
	}

	&.navbar-alert-muted {
		background: $gray-lighter;
		color     : $gray-light;

		a {
			color: $gray-light;
		}
	}

	&.navbar-alert-success {
		background: $brand-success;
	}

	&.navbar-alert-info {
		background: $brand-info;
	}

	&.navbar-alert-warning {
		background: $brand-warning;
	}

	&.navbar-alert-danger {
		background: $brand-danger;
	}
}

.card {
	// Basic card
	@extend .panel;
	@extend .panel-default;

	&:hover {
		border-color: #CCC;
		@include box-shadow(0 2px 2px rgba(0,0,0,.09));

		.card-footer,
		.card-header {
			border-color: #CCC;
		}
	}

	.nav-tabs {
		background: lighten($gray-lighter, 3%);
	}

	.nav-tabs > li > a,
	.nav-tabs > li.active > a {
		border-top: none;
	}

	.nav-tabs > li:first-child.active > a {
		border-left-color: transparent;
	}

	.card-header {
		@extend .panel-heading;
		border-bottom  : 1px solid #ddd !important;
		background     : $white;
		display        : flex;
		justify-content: space-between;
		align-items    : baseline;

		.card-title {
			font-weight: bold;
			font-size  : 133%;
		}

		.card-header-actions {
			align-self: flex-end;
		}

	}

	.card-content {
		@extend .panel-body;
	}

	.card-footer {
		@extend .panel-footer;
		font-size: 80%;
	}

	// Status cards
	&.card-muted {
		opacity: 0.5;
	}

	&.card-danger,
	&.card-info,
	&.card-primary,
	&.card-success,
	&.card-warning {
		border-left-width: 10px;
	}

	&.card-primary {
		border-left-color: $brand-primary;

		.card-header {
			background: lighten($brand-primary, 55%);
		}

		.card-title {
			color: $brand-primary;
		}
	}

	&.card-success {
		border-left-color: $brand-success;

		.card-header {
			background: lighten($brand-success, 45%);
		}

		.card-title {
			color: $brand-success;
		}
	}

	&.card-info {
		border-left-color: $brand-info;

		.card-header {
			background: lighten($brand-info, 35%);
		}

		.card-title {
			color: $brand-info;
		}
	}

	&.card-warning {
		border-left-color: $brand-warning;

		.card-header {
			background: lighten($brand-warning, 35%);
		}

		.card-title {
			color: $brand-warning;
		}
	}

	&.card-danger {
		border-left-color: $brand-danger;

		.card-header {
			background: lighten($brand-danger, 35%);
		}

		.card-title {
			color: $brand-danger;
		}
	}

}

.data-grid {
	display        : grid;
	grid-column-gap: 15px;

	dt {
		text-transform: uppercase;
		font-size     : 0.8em;
		color         : inherit;
	}

	// We may want a horizontal layout for definition lists some day
	// &.data-list dl {
	// 	display    : flex;
	// 	align-items: baseline;
	//
	// 	dt {
	// 		margin-right: 10px;
	// 	}
	// }
}

.grid-xs-4 {
	@media (min-width: $screen-xs) {
		grid-template-columns: auto auto auto auto;
	}
}

.grid-xs-3 {
	@media (min-width: $screen-xs) {
		grid-template-columns: auto auto auto;
	}
}

.grid-xs-2 {
	@media (min-width: $screen-xs) {
		grid-template-columns: auto auto;
	}
}

.grid-xs-1 {
	@media (min-width: $screen-xs) {
		grid-template-columns: auto;
	}
}

.grid-sm-5 {
	@media (min-width: $screen-sm) {
		grid-template-columns: auto auto auto auto auto;
	}
}

.grid-sm-4 {
	@media (min-width: $screen-sm) {
		grid-template-columns: auto auto auto auto;
	}
}

.grid-sm-3 {
	@media (min-width: $screen-sm) {
		grid-template-columns: auto auto auto;
	}
}

.grid-sm-2 {
	@media (min-width: $screen-sm) {
		grid-template-columns: auto auto;
	}
}

.grid-sm-1 {
	@media (min-width: $screen-sm) {
		grid-template-columns: auto;
	}
}

.grid-md-5 {
	@media (min-width: $screen-md) {
		grid-template-columns: auto auto auto auto auto;
	}
}

.grid-md-4 {
	@media (min-width: $screen-md) {
		grid-template-columns: auto auto auto auto;
	}
}

.grid-md-3 {
	@media (min-width: $screen-md) {
		grid-template-columns: auto auto auto;
	}
}

.grid-md-2 {
	@media (min-width: $screen-md) {
		grid-template-columns: auto auto;
	}
}

.grid-md-1 {
	@media (min-width: $screen-md) {
		grid-template-columns: auto;
	}
}

.grid-lg-5 {
	@media (min-width: $screen-lg) {
		grid-template-columns: auto auto auto auto auto;
	}
}

.grid-lg-4 {
	@media (min-width: $screen-lg) {
		grid-template-columns: auto auto auto auto;
	}
}

.grid-lg-3 {
	@media (min-width: $screen-lg) {
		grid-template-columns: auto auto auto;
	}
}

.grid-lg-2 {
	@media (min-width: $screen-lg) {
		grid-template-columns: auto auto;
	}
}

.grid-lg-1 {
	@media (min-width: $screen-lg) {
		grid-template-columns: auto;
	}
}

.memberRes {
	@extend .btn;
	@extend .btn-default;
	@extend .btn-block;
	text-align: left;

	&[draggable="true"] {
		&:before {
			font-family: 'Glyphicons Halflings';
			content    : "\e235";
			color      : $gray-light;
		}
	}
}

.dropdown-menu > li > input[type=submit] {
	display    : block;
	padding    : 3px 20px;
	clear      : both;
	font-weight: 400;
	line-height: 1.42857;
	color      : #333;
	white-space: nowrap;
	text-align : left;
	width      : 100%;

	&:hover {
		text-decoration: none;
		color          : $white;
		background     : $brand-primary;
	}
}

